--- a/templates/roster/index.html.twig
+++ b/templates/roster/index.html.twig
@@ -336,5 +336,15 @@
         </div>
     {% endif %}
 
+    {% if is_granted('ROLE_ADMIN') and groupSelected == 'cadets' %}
+        <div class="container container-main pt-3 pb-3 mb-3">
+            <div class="row">
+                <div class="col-md-12">
+                    <a href="{{ path('roster_zombies', {'format': 'txt'}) }}" target="_blank" class="btn btn-primary"><i class="fa fa-download"></i> zombies</a>
+                </div>
+            </div>
+        </div>
+    {% endif %}
+
 {% endblock pageContent %}
 
