--- a/templates/perun/index.html.twig
+++ b/templates/perun/index.html.twig
@@ -24,6 +24,9 @@
                         <th>
                             Joueurs
                         </th>
+                        <th>
+                            Temps mission
+                        </th>
                     </tr>
                     </thead>
                     <tbody>
@@ -55,10 +58,19 @@
                             <td>
                                 {{ instance.playersCountCorrected }}
                             </td>
+                            {% if instance.alive %}
+                                <td>
+                                    {{ instance.modelTime | round | date('H:i', '+00:00 GMT') }}
+                                </td>
+                            {% else %}
+                                <td class="alert-warning">
+                                    timeout {{ instance.lastUpdateSeconds }} secondes
+                                </td>
+                            {% endif %}
                         </tr>
                     {% else %}
                         <tr>
-                            <td colspan="4">
+                            <td colspan="5">
                                 <i>pas de serveurs</i>
                             </td>
                         </tr>
