--- a/templates/perun/instance.html.twig
+++ b/templates/perun/instance.html.twig
@@ -8,86 +8,204 @@
     <div class="container container-main pt-3 pb-3 mb-3">
         <div class="row mb-3 ml-1 mr-1">
             <div class="page-header">
-                <h1 id="tables">Joueurs connectés au serveur {{ server.name }}</h1>
+                <h1>Serveur {{ server.name }}</h1>
+
+                {% if not server.perunInstance.alive %}
+                    <div class="alert alert-secondary">
+                        <i class="fa fa-exclamation-triangle text-warning"></i> les données ne sont plus actualisées depuis {{ server.perunInstance.lastUpdateSeconds }} secondes
+                    </div>
+                {% endif %}
             </div>
-            <h3>Mission: {{ server.perunInstance.mission }}</h3>
-            <div class="table-responsive">
-                <table class="table table-striped table-bordered table-hover">
+        </div>
+
+        <div class="row mb-3">
+            <div class="col-md-6">
+                <table class="table table-bordered">
+                    <tbody>
+                    <tr>
+                        <td>
+                            Mission
+                        </td>
+                        <td colspan="3">
+                            {{ server.perunInstance.mission }}
+                        </td>
+                    </tr>
+                    {% if missionData.hasTheatre %}
+                        <tr>
+                            <td>
+                                <i class="fa fa-map"></i> Théatre
+                            </td>
+                            <td colspan="3">
+                                {{ missionData.theatre }} - {{ missionData.getMissionCurrentDateTime | date('d/m/Y H:i') }}
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <i class="fa fa-temperature-high"></i> Température
+                            </td>
+                            <td>
+                                {{ missionData.weather.temperature(constant('App\\Perun\\DTO\\Weather::TEMPERATURE_UNIT_FAHRENHEIT')) | round(1) }}
+                                °f
+                            </td>
+                            <td>
+                                {{ missionData.weather.temperature(constant('App\\Perun\\DTO\\Weather::TEMPERATURE_UNIT_CELSIUS')) | round(1) }}
+                                °c
+                            </td>
+                            <td>
+                                {{ missionData.weather.temperature(constant('App\\Perun\\DTO\\Weather::TEMPERATURE_UNIT_CELSIUS')) | round(1) }}
+                                °c
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <i class="fa fa-tachometer-alt"></i> QNH
+                            </td>
+                            <td>
+                                {{ missionData.weather.qnh(constant('App\\Perun\\DTO\\Weather::QNH_UNIT_INHG')) | number_format(2) }}
+                                inHg
+                            </td>
+                            <td>
+                                {{ missionData.weather.qnh(constant('App\\Perun\\DTO\\Weather::QNH_UNIT_HPA')) | number_format(1,'.','') }}
+                                hPa
+                            </td>
+                            <td>
+                                {{ missionData.weather.qnh(constant('App\\Perun\\DTO\\Weather::QNH_UNIT_MMHG')) | number_format(0) }}
+                                mmHg
+                            </td>
+                        </tr>
+                    {% endif %}
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-md-6">
+                <table class="table table-bordered">
                     <thead>
                     <tr>
-                        <th>
-                            Joueur
-                        </th>
-                        <th>
-                            Ping
-                        </th>
-                        <th>
-                            Coalition
-                        </th>
-                        <th>
-                            Appareil / Rôle
-                        </th>
+                        <td>
+                            Altitude
+                        </td>
+                        <td>
+                            Direction
+                        </td>
+                        <td colspan="3">
+                            <i class="fa fa-wind"></i> Vitesse du vent
+                        </td>
                     </tr>
                     </thead>
                     <tbody>
-                    {% for onlinePlayer in onlinePlayers %}
+                    {% for windLevel,wind in missionData.weather.winds %}
                         <tr>
                             <td>
-                                {% if onlinePlayer.player is null %}
-                                    n/a
-                                {% else %}
-                                    {% if onlinePlayer.player.user is not null %}
-                                        {% if onlinePlayer.player.user.member %}
-                                            <i class="fa fa-user text-success" title="Membre"></i>
-                                        {% elseif onlinePlayer.player.user.status == constant('\\App\\Entity\\User::STATUS_CADET') %}
-                                            <i class="fa fa-user-graduate text-primary" title="Cadet"></i>
-                                        {% else %}
-                                            <i class="fa fa-user text-info" title="Invité"></i>
-                                        {% endif %}
-                                        <a href="{{ path('user_view', {'user': onlinePlayer.player.user.nickname}) }}">{{ onlinePlayer.player.user.nickname }}</a>
-                                    {% else %}
-                                        <i class="fa fa-user-secret text-secondary"
-                                           title="Inconnu - non enregistré sur le site"></i>
-                                        {{ onlinePlayer.player.lastName }}
-                                    {% endif %}
-                                {% endif %}
+                                {{ windLevel }}
                             </td>
                             <td>
-                                {{ onlinePlayer.ping }}
+                                {{ wind.direction }}
                             </td>
                             <td>
-                                {% if onlinePlayer.side == 2 %}
-                                    <i class="fa fa-plane text-primary"></i>
-                                {% elseif onlinePlayer.side == 1 %}
-                                    <i class="fa fa-plane text-danger"></i>
-                                {% else %}
-                                    <i class="fa fa-eye"></i>
-                                {% endif %}
+                                {{ wind.speed(constant('App\\Perun\\DTO\\Wind::SPEED_UNIT_KNOTS')) | round(1) }} kts
                             </td>
                             <td>
-                                {% if missionSlots is not null %}
-                                    {% set playerSlot = missionSlots.getSlotByCoalitionIdAndUnitId(onlinePlayer.side, onlinePlayer.slot) %}
-                                    {% if playerSlot is not null %}
-                                        {{ playerSlot.type }} - {{ playerSlot.role }}
-                                    {% endif %}
-                                {% endif %}
+                                {{ wind.speed(constant('App\\Perun\\DTO\\Wind::SPEED_UNIT_KPH')) | round(1) }} km/h
                             </td>
-                        </tr>
-                    {% else %}
-                        <tr>
-                            <td colspan="4">
-                                <i>pas de joueurs connectés</i>
+                            <td>
+                                {{ wind.speed(constant('App\\Perun\\DTO\\Wind::SPEED_UNIT_MS')) | round(0) }} m/s
                             </td>
                         </tr>
                     {% endfor %}
                     </tbody>
                 </table>
             </div>
+            <div class="col-md-12">
+                <div class="alert alert-secondary">
+                    {% if missionData.weather.visibilityDistance > 0 %}Visibilité: {{ missionData.weather.visibilityDistance }}{% endif %}
+                    {% if missionData.weather.cloudsBase > 0 %}Base des nuages: {{ missionData.weather.cloudsBase }}{% endif %}
+                    {% if missionData.weather.cloudsThickness > 0 %}Epaisseur des nuages: {{ missionData.weather.cloudsThickness }}{% endif %}
+                    {% if missionData.weather.cloudsPrecipitations > 0 %}Précipitations: {{ missionData.weather.cloudsPrecipitations }}{% endif %}
+                    {% if missionData.weather.fogEnabled > 0 %}Brouillard{% endif %}
+                </div>
+            </div>
+        </div>
+
+        <div class="row mb-3">
+            <div class="col-md-12">
+                <div class="table-responsive">
+                    <table class="table table-striped table-bordered table-hover">
+                        <thead>
+                        <tr>
+                            <th>
+                                Joueur
+                            </th>
+                            <th>
+                                Ping
+                            </th>
+                            <th>
+                                Coalition
+                            </th>
+                            <th>
+                                Appareil / Rôle
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for onlinePlayer in onlinePlayers %}
+                            <tr>
+                                <td>
+                                    {% if onlinePlayer.player is null %}
+                                        n/a
+                                    {% else %}
+                                        {% if onlinePlayer.player.user is not null %}
+                                            {% if onlinePlayer.player.user.member %}
+                                                <i class="fa fa-user text-success" title="Membre"></i>
+                                            {% elseif onlinePlayer.player.user.status == constant('\\App\\Entity\\User::STATUS_CADET') %}
+                                                <i class="fa fa-user-graduate text-primary" title="Cadet"></i>
+                                            {% else %}
+                                                <i class="fa fa-user text-info" title="Invité"></i>
+                                            {% endif %}
+                                            <a href="{{ path('user_view', {'user': onlinePlayer.player.user.nickname}) }}">{{ onlinePlayer.player.user.nickname }}</a>
+                                        {% else %}
+                                            <i class="fa fa-user-secret text-secondary"
+                                               title="Inconnu - non enregistré sur le site"></i>
+                                            {{ onlinePlayer.player.lastName }}
+                                        {% endif %}
+                                    {% endif %}
+                                </td>
+                                <td>
+                                    {{ onlinePlayer.ping }}
+                                </td>
+                                <td>
+                                    {% if onlinePlayer.side == 2 %}
+                                        <i class="fa fa-plane text-primary"></i>
+                                    {% elseif onlinePlayer.side == 1 %}
+                                        <i class="fa fa-plane text-danger"></i>
+                                    {% else %}
+                                        <i class="fa fa-eye"></i>
+                                    {% endif %}
+                                </td>
+                                <td>
+                                    {% if missionSlots is not null %}
+                                        {% set playerSlot = missionSlots.getSlotByCoalitionIdAndUnitId(onlinePlayer.side, onlinePlayer.slot) %}
+                                        {% if playerSlot is not null %}
+                                            {{ playerSlot.type }} - {{ playerSlot.role }}
+                                        {% endif %}
+                                    {% endif %}
+                                </td>
+                            </tr>
+                        {% else %}
+                            <tr>
+                                <td colspan="4">
+                                    <i>pas de joueurs connectés</i>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 
     <div class="container container-main pt-3 pb-3 mb-3">
-        <div class="row mb-3 ml-1 mr-1">
+        <div class="row mb-3">
             <div class="col-md-12">
                 <div id="history24h" style="min-width: 400px; height: 300px; margin: 0 auto"></div>
                 <div class="float-right">
