fix calendar top menu item when no events in next days

--- a/templates/default/_header/_menu-item.html.twig
+++ b/templates/default/_header/_menu-item.html.twig
@@ -45,7 +45,7 @@
             {% else %}
                 <span class="d-lg-none d-xl-inline">
                     {{ menuItem.label }}
-                </span>l
+                </span>
             {% endif %}
             {% if newEvents > 0 %}
                 <span class="badge badge-pill badge-danger" title="{{ newEvents }} nouveaux événements">
