disable spell checker in calendar event editor

--- a/templates/calendar/edit.html.twig
+++ b/templates/calendar/edit.html.twig
@@ -55,6 +55,7 @@ sideBySideFullscreen: false,
 fullscreen: false,
 uploadImage: true,
 imageMaxSize: 10000000,
+spellChecker: false,
 imageUploadEndpoint: "{{ path('file_upload') }}",
 });
 </script>
