--- a/templates/calendar/view.html.twig
+++ b/templates/calendar/view.html.twig
@@ -165,6 +165,11 @@
                         participer.
                     </div>
                 </div>
+            {% elseif not event.registration %}
+                <div class="col-md-12 mt-3">
+                    <div class="alert alert-info">Les inscriptions à cet événement sont terminées. Contactez directement l'organisateur ({{ event.owner.nickname }}) pour plus de précisions.
+                    </div>
+                </div>
             {% else %}
                 {% if is_granted('VOTE', event) %}
                     {# <div class="col-md-12">Je participe :</div> #}
