add restriction to access cms pages, close #300

--- a/templates/admin/menu/item/view.html.twig
+++ b/templates/admin/menu/item/view.html.twig
@@ -56,6 +56,14 @@
                                     {{ item.label }}
                                 </td>
                             </tr>
+                            <tr>
+                                <td>
+                                    Restriction:
+                                </td>
+                                <td>
+                                    {{ ('values.restriction.'~item.restriction) | trans }}
+                                </td>
+                            </tr>
 
                         </table>
                         <div class="row">
