--- a/templates/admin/page/list.html.twig
+++ b/templates/admin/page/list.html.twig
@@ -5,7 +5,7 @@
 
 {% block pageContent %}
     <div class="row mb-4">
-        <div class="col-xl-8">
+        <div class="col-sm-12">
             {% embed "admin/page/_list.html.twig" with {"table": table} %}
                 {% block tableTitle %}
                     <b>Pages</b>
