--- a/templates/admin/page/view.html.twig
+++ b/templates/admin/page/view.html.twig
@@ -69,6 +69,14 @@
                                     </div>
                                 </td>
                             </tr>
+                            <tr>
+                                <td>
+                                    Restriction:
+                                </td>
+                                <td>
+                                    {{ ('values.restriction.'~page.restriction) | trans }}
+                                </td>
+                            </tr>
                         </table>
                         <div class="row">
                             <div class="col-sm-6">
