--- a/templates/admin/module-role/view.html.twig
+++ b/templates/admin/module-role/view.html.twig
@@ -1,13 +1,13 @@
 {% extends 'admin/layout.html.twig' %}
 {% set section="dcs" %}
-{% set subSection="module-system" %}
+{% set subSection="module-role" %}
 
 {% block pageContent %}
     <div class="row mb-4">
         <div class="col-md-6">
             <div class="bs-component">
                 <div class="card mb-3">
-                    <h3 class="card-header">Consulter le système du module DCS</h3>
+                    <h3 class="card-header">Consulter le rôle du module DCS</h3>
                     <div class="card-body">
                         <table class="table">
                             <tr>
@@ -15,7 +15,7 @@
                                     Code:
                                 </td>
                                 <td>
-                                    {{ system.code }}
+                                    {{ role.code }}
                                 </td>
                             </tr>
                             <tr>
@@ -23,7 +23,7 @@
                                     Nom:
                                 </td>
                                 <td>
-                                    {{ system.name }}
+                                    {{ role.name }}
                                 </td>
                             </tr>
                             <tr>
@@ -31,23 +31,23 @@
                                     Position:
                                 </td>
                                 <td>
-                                    {{ system.position }}
+                                    {{ role.position }}
                                 </td>
                             </tr>
                         </table>
                         <div class="row">
                             <div class="col-sm-4">
-                                <a href="{{ path('admin_module_system_list') }}" class="btn btn-primary form-control"><i
+                                <a href="{{ path('admin_module_role_list') }}" class="btn btn-primary form-control"><i
                                             class="fa fa-arrow-left"></i> Retour liste</a>
                             </div>
                             <div class="col-sm-4">
-                                <a href="{{ path('admin_module_system_delete', {'system': system.id}) }}"
+                                <a href="{{ path('admin_module_role_delete', {'role': role.id}) }}"
                                    class="btn btn-outline-danger form-control">
                                     <i class="fa fa-times-circle"></i> Supprimer
                                 </a>
                             </div>
                             <div class="col-sm-4">
-                                <a href="{{ path('admin_module_system_edit', {'system': system.id}) }}"
+                                <a href="{{ path('admin_module_role_edit', {'role': role.id}) }}"
                                    class="btn btn-outline-warning form-control"><i class="fa fa-edit"></i> Modifier</a>
                             </div>
                         </div>
