mission maker helper filter with period, close #118

--- a/public/css/custom-51eg.css
+++ b/public/css/custom-51eg.css
@@ -391,6 +391,13 @@ iframe {
     vertical-align: middle;
 }
 
+.roster-period {
+    background-image: linear-gradient(#74cae3,#5bc0de 60%,#4ab9db);
+    background-repeat: no-repeat;
+    -webkit-filter: none;
+    color: #fff;
+}
+
 .card-stats {
     height: 12em;
 }
